# Hubloom

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LLM 封装.md  RAG设计.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  server.py  记忆封装.md  设计思路.md
a2a_adapter/: serve_card_only.py  simple_client.py
a2ui/: agent.py
agents/: __init__.py  agent.py  agent_log.py  assessor.py  base.py  chat.py  cortex_agent.py  default_registry.py  events.py  hub.py  hub_models.py  intent.py  plan_execute.py  plan_models.py  prompts.py  react.py  reflection.py  reflection_models.py  test.py  test_hub.py  test_plan_execute.py  test_reflection.py  thought.py
agents copy/: __init__.py
config/: env.example.yaml
context/: assembler.py  memory_context.py
core/: exceptions.py  factory.py  llm.py  models.py  provider.py
data/: memory.db  memory_test.db
docs/: Hubloom-A2A互联.md  Hubloom-ADP编排.md  Hubloom-MCP适配.md  Hubloom-RAG知识库.md  Hubloom-SSE契约.md  Hubloom-工具层.md  Hubloom-记忆系统.md  Hubloom产品定位.md  Hubloom总体架构图.md  Hubloom架构边界.md
embedders/: openai_embedder.py
examples/: __init__.py
mcp/: client.py  server.py  test_client.py
mcp_adapter/: auth.py  client.py  discovery.py  log.py  response_normalize.py  server.py  spec_loader.py  test_mcp.py
mcp_adapter copy/: __init__.py  http_context.py  log.py  server.py
memory/: __init__.py  batch_consolidator.py  clear_memory.py  consolidator.py  context.py  experience_case.py  factory.py  lifecycle.py  manager.py  memory_context.py  models.py  run_worker.py  test_consolidator.py  test_context.py  test_memory_context.py  test_memory_manager.py  types.py  utils.py
observability/: __init__.py  log.py  test_log_demo.py
retrieval/: demo_rag.py  knowledge_base.py  loader.py  query_optimizer.py  rag_bootstrap.py  semantic_splitter.py
skills/: README.md
src/: config.py  context.py  runtime.py
tests/: test_a2ui_bind.py  test_a2ui_json_quotes.py  test_a2ui_split.py  test_a2ui_stream.py  test_agent.py  test_answer_parts.py  test_api_events.py  test_chat_history.py  test_core.py  test_execute.py  test_mcp.py  (+18 more)
(+393 files in other folders)
