[project]
name = "agentcortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.37.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.26.0",
    "markitdown[docx]>=0.1.5",
    "chromadb>=1.5.9",
    "loguru>=0.7.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "openapi-spec-validator>=0.9.0",
    "prance>=25.4.8.0",
]
