[project]
name = "agentcortex"
version = "0.1.0"
description = "OpenAPI-driven MCP agent hub: natural language interface to REST APIs via ReAct, Hub orchestration, and optional Plan/Reflection."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.37.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.26.0",
    "markitdown[docx]>=0.1.5",
    "chromadb>=1.5.9",
    "loguru>=0.7.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "openapi-spec-validator>=0.9.0",
    "prance>=25.4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
