[project]
name = "hubloom"
version = "0.3.0"
description = "Open-source enterprise agent interconnect platform: OpenAPI-driven MCP gateway, natural language to REST APIs, orchestration via assessor and deep thought."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.37.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.26.0",
    "markitdown[docx]>=0.1.5",
    "chromadb>=1.5.9",
    "loguru>=0.7.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "openapi-spec-validator>=0.9.0",
    "prance>=25.4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "a2a-sdk>=1.1.0",
    "pyyaml>=6.0.3",
    "a2ui-agent-sdk>=0.2.4",
    "google-adk>=2.5.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
